--- a/xJournal/Modules/JournalEntries/ViewController/JournalEntriesViewController.storyboard
+++ b/xJournal/Modules/JournalEntries/ViewController/JournalEntriesViewController.storyboard
@@ -22,18 +22,19 @@
                                 <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="20" maxY="0.0"/>
                             </tableView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="73S-SS-m6T">
-                                <rect key="frame" x="0.0" y="732" width="393" height="120"/>
+                                <rect key="frame" x="0.0" y="712" width="393" height="140"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="THd-A9-m2D">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="120"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="140"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </view>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="DpW-BZ-5JH"/>
+                                    <constraint firstAttribute="height" constant="140" id="DpW-BZ-5JH"/>
                                 </constraints>
-                                <blurEffect style="systemThickMaterial"/>
+                                <blurEffect style="extraLight"/>
                             </visualEffectView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ye-fG-UK7" customClass="AddEntryButton" customModule="xJournal" customModuleProvider="target">
-                                <rect key="frame" x="161.66666666666666" y="752" width="70" height="70"/>
+                                <rect key="frame" x="161.66666666666666" y="747" width="70" height="70"/>
                                 <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="8Ye-fG-UK7" secondAttribute="height" multiplier="1:1" id="GVB-SV-5kw"/>
@@ -52,7 +53,7 @@
                             <constraint firstItem="73S-SS-m6T" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="9t5-kk-NgM"/>
                             <constraint firstAttribute="bottom" secondItem="NeE-jE-ZWr" secondAttribute="bottom" id="ABg-vr-u4z"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="NeE-jE-ZWr" secondAttribute="trailing" constant="10" id="Bpt-gY-o04"/>
-                            <constraint firstItem="8Ye-fG-UK7" firstAttribute="centerY" secondItem="73S-SS-m6T" secondAttribute="centerY" constant="-5" id="DrY-xf-fXT"/>
+                            <constraint firstItem="8Ye-fG-UK7" firstAttribute="centerY" secondItem="73S-SS-m6T" secondAttribute="centerY" id="DrY-xf-fXT"/>
                             <constraint firstItem="NeE-jE-ZWr" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="E7v-ie-4YS"/>
                             <constraint firstItem="8Ye-fG-UK7" firstAttribute="centerX" secondItem="73S-SS-m6T" secondAttribute="centerX" id="FyB-PT-oIr"/>
                             <constraint firstAttribute="bottom" secondItem="73S-SS-m6T" secondAttribute="bottom" id="IfN-cu-60o"/>
@@ -84,7 +85,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tableBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
